charon/tests/ui/generic-associated-types.out
error: Generic associated types are not supported
 --> tests/ui/generic-associated-types.rs:5:5
  |
5 |     type Item<'a>
  |     ^^^^^^^^^^^^^

error: Item `test_crate::LendingIterator` caused errors; ignoring.
 --> tests/ui/generic-associated-types.rs:4:1
  |
4 | pub trait LendingIterator {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<Self::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<Self::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/generic-associated-types.rs:48:9
   |
48 |         type Type<'b>: for<'c> Foo<&'a &'b &'c ()>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::lifetimes::Bar` caused errors; ignoring.
  --> tests/ui/generic-associated-types.rs:47:5
   |
47 |     pub trait Bar<'a> {
   |     ^^^^^^^^^^^^^^^^^

error: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^

error: Error during trait resolution: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::ullbc_ast::RawTerminator
         charon_lib::ast::ullbc_ast::Terminator
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: 
  --> tests/ui/generic-associated-types.rs:34:1
   |
34 | / pub fn main() {
35 | |     let x = 42;
36 | |     let iter = Some(&42);
37 | |     let mut sum = 0;
38 | |     for_each(iter, |item| sum += *item);
39 | |     assert_eq!(sum, 42);
40 | | }
   | |_^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         alloc::vec::Vec<charon_lib::ast::types::Ty>
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0, '_1>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         alloc::vec::Vec<charon_lib::ast::types::Ty>
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::Local
         charon_lib::ids::vector::Vector<charon_lib::ast::values::LocalId, charon_lib::ast::gast::Local>
         charon_lib::ast::gast::Locals
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::Local
         charon_lib::ids::vector::Vector<charon_lib::ast::values::LocalId, charon_lib::ast::gast::Local>
         charon_lib::ast::gast::Locals
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::ullbc_ast::RawStatement
         charon_lib::ast::ullbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::ullbc_ast::Statement>
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::expressions::Rvalue
         charon_lib::ast::ullbc_ast::RawStatement
         charon_lib::ast::ullbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::ullbc_ast::Statement>
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0, '_1]
            got: ['_]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::ullbc_ast::RawTerminator
         charon_lib::ast::ullbc_ast::Terminator
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::expressions::Operand
         alloc::vec::Vec<charon_lib::ast::expressions::Operand>
         charon_lib::ast::gast::Call
         charon_lib::ast::ullbc_ast::RawTerminator
         charon_lib::ast::ullbc_ast::Terminator
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::ullbc_ast::RawStatement
         charon_lib::ast::ullbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::ullbc_ast::Statement>
         charon_lib::ast::ullbc_ast::BlockData
         charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>
         charon_lib::ast::gast::GExprBody<charon_lib::ids::vector::Vector<charon_lib::ast::ullbc_ast::BlockId, charon_lib::ast::ullbc_ast::BlockData>>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: 
  --> tests/ui/generic-associated-types.rs:38:5
   |
38 |     for_each(iter, |item| sum += *item);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         alloc::vec::Vec<charon_lib::ast::types::Ty>
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0, '_1>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         alloc::vec::Vec<charon_lib::ast::types::Ty>
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::Local
         charon_lib::ids::vector::Vector<charon_lib::ast::values::LocalId, charon_lib::ast::gast::Local>
         charon_lib::ast::gast::Locals
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::Local
         charon_lib::ids::vector::Vector<charon_lib::ast::values::LocalId, charon_lib::ast::gast::Local>
         charon_lib::ast::gast::Locals
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::expressions::Rvalue
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0, '_1]
            got: ['_]
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::expressions::Operand
         alloc::vec::Vec<charon_lib::ast::expressions::Operand>
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::GenericArgs
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::expressions::Place
         charon_lib::ast::llbc_ast::RawStatement
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'_0>
  --> tests/ui/generic-associated-types.rs:38:20
   |
38 |     for_each(iter, |item| sum += *item);
   |                    ^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (38 errors)
